add transitions to child elements

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div><p>Sending packages within turkey has never been easier, AMAT is here to serve you. We offer safe and speedy delivery to your doorstep.</p></div>
 			</div>
 			<div id="post_row">
-				
+
 				<div class="post_single">
 					<div class="post_img"></div>
 					<div class="post_text">
@@ -325,7 +325,7 @@
 
 		<!-- CONTACT -->
 		<section id="contact" class="x_padding">
-			<div>
+			<div id="form_wrap">
 				<h3 class="bold">Contact Us</h3>
 				<form id="form" class="box_radius">
 					<fieldset>
@@ -452,7 +452,7 @@
 			</div>
 
 			<div id="bottom">
-				<div>&copy;2021 AMAT Logistics. Allrights reserved</div>
+				<div><p>&copy;2021 AMAT Logistics. All rights reserved</p></div>
 				<div>
 					<ul>
 						<li><a href="#">Terms & Conditions</a></li>
