modify input attribute

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 					</fieldset>
 
 					<fieldset id="submit">
-						<button class="call_to_action box_radius" onclick={function() {console.log(jaja)}}>Request Qoute</button>
+						<button class="call_to_action box_radius">Request Qoute</button>
 					</fieldset>
 
 				</form>
@@ -377,7 +377,7 @@
 				<p>Stay updated  with the latest news, updates, discounts and more with Amat.</p>
 			</div>
 			<form id="n_form" class="box_radius">
-				<input type="email" name="" placeholder="Email Address" readonly="">
+				<input type="email" name="email_newsletter" placeholder="Email Address" required="">
 				<button class="box_radius">Subscribe</button>
 			</form>
 		</section>
